Add clear function to box_layout.py/kv program

--- a/prac_08/box_layout.kv
+++ b/prac_08/box_layout.kv
@@ -4,6 +4,7 @@ BoxLayout:
     Button: #1
         text: 'Clear'
         font_size: 42
+        on_release: app.clear_field()
     TextInput: #2
         id: input_name
         text: ''
