Add box_layout.kv/py program

--- a/prac_08/box_layout.kv
+++ b/prac_08/box_layout.kv
@@ -1,20 +1,9 @@
 BoxLayout:
     orientation: 'vertical'
 #    orientation: 'horizontal'
-    Button: #1
-        text: 'Clear'
-        font_size: 42
-        on_release: app.clear_field()
-    TextInput: #2
-        id: input_name
-        text: ''
-        font_size: 42
-    Button: #3
-        text: 'Greet'
-        font_size: 42
-        on_press: app.handle_greet()
-    Label: #4
-        id: output_label
-        text: 'Enter your name'
-        font_size: 42
-        color: (1, 1, 0, 1)
+    Button:
+        text: 'one'
+    Button:
+        text: 'two'
+    Button:
+        text: 'three'
