--- a/prac_08/squaring.kv
+++ b/prac_08/squaring.kv
@@ -1,22 +1,15 @@
 BoxLayout:
     orientation: 'vertical'
-    BoxLayout:
-        orientation: 'horizontal'
-        TextInput: #text entry
-            id: input_number
-            text: '7'
-            font_size: 80
-            multiline: False
-        Button:
-            text: 'Square'
-            font_size: 60
-            # the following line specifies the function in the app class to call when the button is pressed
-            on_press: app.handle_calculate(input_number.text)
-        Label:
-            id: output_label
-            font_size: 80
-            color: (1, 0.6, 0.75, 1)
-    Label:
-        text: 'Enter a number and press "Square"'
+    TextInput:
+        id: input_number
+        text: '7'
         font_size: 48
-        color:(1, 1, 1, 1)
+        multiline: False
+    Button:
+        text: 'Square'
+        # the following line specifies the function in the app class to call when the button is pressed
+        on_press: app.handle_calculate(input_number.text)
+    Label:
+        id: output_label
+        font_size: 48
+        color: (0, 1, 1, 1)
